--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -62,7 +62,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="70dp"
         android:layout_weight="1"
-        android:background="@drawable/hum" />
+        android:background="@drawable/hh" />
 
 
 </GridLayout>
