--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -24,24 +24,24 @@
         android:textColor="#000000"
         android:textSize="19dp" />
 
+
     <Button
         android:id="@+id/temp"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="10dp"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="210dp"
         android:layout_height="150dp"
-        android:layout_column="1"
         android:layout_row="1"
+        android:layout_column="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/teeem" />
-
 
     <Button
         android:id="@+id/foco"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="226dp"
         android:layout_height="150dp"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="1"
         android:layout_gravity="center_horizontal|right"
         android:layout_marginTop="70dp"
@@ -50,7 +50,6 @@
         android:backgroundTint=""
         android:tint="@android:color/background_light" />
 
-
     <Button
         android:id="@+id/hum"
         style="?android:attr/buttonStyleSmall"
@@ -58,7 +57,7 @@
         android:layout_height="150dp"
         android:layout_row="3"
         android:layout_column="1"
-        android:layout_gravity="center"
+        android:layout_gravity="center|left"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="70dp"
         android:layout_weight="1"
