--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -8,7 +8,6 @@
     android:background="@drawable/icono"
         >
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="57dp"
         android:text=""
@@ -16,53 +15,55 @@
         android:textColor="#000000"
         android:textSize="19dp" />
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="57dp"
         android:text=""
         android:layout_marginLeft="10dp"
         android:textColor="#000000"
         android:textSize="19dp" />
-
-
-    <Button
-        android:id="@+id/temp"
-        style="?android:attr/buttonStyleSmall"
+    <androidx.cardview.widget.CardView
         android:layout_width="210dp"
         android:layout_height="150dp"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="70dp"
-        android:background="@drawable/teeem" />
-
-    <Button
-        android:id="@+id/foco"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="226dp"
+        android:layout_marginLeft="10dp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:elevation="15dp"
+        android:background="@drawable/tempera"
+        />
+    <androidx.cardview.widget.CardView
+        android:layout_width="193dp"
         android:layout_height="150dp"
-        android:layout_row="2"
-        android:layout_column="1"
+        android:layout_row="1"
+        android:layout_column="2"
         android:layout_gravity="center_horizontal|right"
         android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/fooco"
+        android:background="@drawable/control"
         android:backgroundTint=""
         android:tint="@android:color/background_light" />
-
-    <Button
-        android:id="@+id/hum"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="211dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="218dp"
         android:layout_height="150dp"
-        android:layout_row="2"
-        android:layout_column="1"
+        android:layout_row="1"
+        android:layout_column="0"
         android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="70dp"
-        android:layout_weight="1"
-        android:background="@drawable/hh" />
+        android:background="@drawable/humedad" />
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="195dp"
+        android:layout_height="150dp"
+        android:layout_row="1"
+        android:layout_column="2"
+        android:layout_gravity="center"
+        android:background="@drawable/control" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="218dp"
+        android:layout_height="150dp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:layout_gravity="center"
+        android:background="@drawable/humedad" />
 
 </GridLayout>
 
