--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -36,16 +36,11 @@
         android:layout_height="150dp"
         android:layout_row="1"
         android:layout_column="2"
-        android:layout_gravity="center_horizontal|right"
         android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/control"
         android:backgroundTint=""
         android:tint="@android:color/background_light" />
-<<<<<<< HEAD
-
-
-=======
     <androidx.cardview.widget.CardView
         android:layout_width="218dp"
         android:layout_height="150dp"
@@ -53,8 +48,6 @@
         android:layout_column="0"
         android:layout_gravity="center"
         android:background="@drawable/humedad" />
->>>>>>> f102705226e3be5dcf2a04114d21c77a854ce1f9
-
     <androidx.cardview.widget.CardView
         android:layout_width="195dp"
         android:layout_height="150dp"
@@ -67,8 +60,8 @@
         android:layout_height="150dp"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_gravity="center"
-        android:background="@drawable/humedad" />
+        android:layout_marginTop="440dp"
+        android:background="@drawable/cochera" />
 
 </GridLayout>
 
