--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="57dp"
-        android:text=""
+        android:text=" "
         android:layout_marginLeft="10dp"
         android:textColor="#000000"
         android:textSize="19dp" />
@@ -54,7 +54,7 @@
         android:layout_row="1"
         android:layout_column="2"
         android:layout_gravity="center"
-        android:background="@drawable/control" />
+        android:background="@drawable/alarma" />
     <androidx.cardview.widget.CardView
         android:layout_width="218dp"
         android:layout_height="150dp"
