--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -35,7 +35,7 @@
                 android:layout_marginEnd="-1dp"
                 android:background="#7E57C2"
                 android:focusable="true"
-                android:hint="Enter Name"
+                android:hint="Nombre"
                 android:textSize="24dp"
                 android:textColorHint="#EDE7F6"/>
             <EditText
@@ -47,7 +47,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="1dp"
                 android:background="#7E57C2"
-                android:hint="Enter Lastname"
+                android:hint="Apellido"
                  android:textColorHint="#EDE7F6"
                 android:textSize="24dp" />
             <EditText
@@ -59,7 +59,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="1dp"
                 android:background="#7E57C2"
-                android:hint="Enter age"
+                android:hint="Edad"
                 android:textColorHint="#EDE7F6"
                 android:textSize="24dp" />
             <EditText
@@ -72,7 +72,7 @@
                 android:layout_marginEnd="-1dp"
                 android:background="#7E57C2"
                 android:focusable="true"
-                android:hint="Enter mail"
+                android:hint="Correo"
                 android:textSize="24dp"
                 android:textColorHint="#EDE7F6"/>
 
@@ -85,7 +85,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="1dp"
                 android:background="#7E57C2"
-                android:hint="Enter password"
+                android:hint="Contraseña"
                 android:inputType="textPassword"
                 android:textSize="24dp"
                 android:textColorHint="#EDE7F6"/>
@@ -99,7 +99,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="1dp"
                 android:background="#7E57C2"
-                android:hint="Enter gender"
+                android:hint="Genero"
                 android:textColorHint="#EDE7F6"
 
                 android:textSize="24dp" />
@@ -114,7 +114,7 @@
                 android:layout_marginTop="27dp"
                 android:background="#9575DC"
                 android:textColor="#EDE7F6"
-                android:text="Create User" />
+                android:text="Crear Usuario" />
 
         </RelativeLayout>
 
