--- a/app/src/main/res/layout/alarma.xml
+++ b/app/src/main/res/layout/alarma.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/icono">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageButton
+        android:id="@+id/ala"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/alarma"
+        />
+    <Button
+        android:layout_width="350dp"
+        android:layout_height="80dp"
+        android:layout_below="@+id/ala"
+        android:layout_centerInParent="true"
+        android:text="APAGAR"
+        android:textColor="#FFFF"
+        android:backgroundTint="#9C27B0"
+        android:textSize="28dp"
+
+</RelativeLayout>
