--- a/app/src/main/res/layout/hum.xml
+++ b/app/src/main/res/layout/hum.xml
@@ -8,11 +8,10 @@
 
     <Button
         android:id="@+id/hum"
-        android:layout_width="270dp"
+        android:layout_width="320dp"
         android:layout_height="240dp"
-        android:layout_centerInParent="true"
-
-        android:background="@drawable/hh"
+           android:layout_centerInParent="true"
+        android:background="@drawable/humedad"
         android:baselineAligned="true" />
 
     <TextView
