--- a/app/src/main/res/layout/cochera.xml
+++ b/app/src/main/res/layout/cochera.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent"
+    android:background="@drawable/icono"
+    >
+    <ImageButton
+        android:id="@+id/img"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@drawable/cochera"
+        />
+    <Button
+        android:id="@+id/abrir"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:text="Abrir"
+        android:textSize="28dp"
+        android:textColor="#FFFF"
+        android:layout_centerInParent="true"
+        android:backgroundTint="#9C27B0"
+        android:layout_below="@+id/img"/>
+    <TextView
+        android:id="@+id/msn"
+        android:layout_width="350dp"
+        android:layout_height="25dp"
+        android:text=""
+        android:textSize="20dp"
+        android:layout_below="@id/abrir"
+        />
+    <Button
+        android:id="@+id/cerrar"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/msn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="#9C27B0"
+        android:text="Cerrar"
+        android:textColor="#FFFF"
+        android:textSize="28dp" />
+</RelativeLayout>
