--- a/app/src/main/res/layout/diseno_switch.xml
+++ b/app/src/main/res/layout/diseno_switch.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/eee">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
-        android:id="@+id/lugar"
+        android:id="@+id/cuarto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lugar"
+        android:text="Cuarto"
         android:textSize="35dp"/>
 <LinearLayout
     android:orientation="vertical"
@@ -21,13 +22,164 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:id="@+id/switch_foco"
+        android:id="@+id/switch_cuarto"
         android:onClick=""
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
+        />
 </LinearLayout>
 </LinearLayout>
     <TextView
-        android:id="@+id/idespacio"
+        android:id="@+id/idespacio1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#777676"
+        android:layout_marginTop="11dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/cocina"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cocina"
+            android:textSize="35dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Switch
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:id="@+id/Switch_cocina"
+                android:onClick=""
+                 />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/idespacio2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#777676"
+        android:layout_marginTop="11dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/bano"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Baño"
+            android:textSize="35dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Switch
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:id="@+id/Switch_bano"
+                android:onClick=""
+                 />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/idespacio3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#777676"
+        android:layout_marginTop="11dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/sala"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sala"
+            android:textSize="35dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Switch
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:id="@+id/Switch_sala"
+                android:onClick=""
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/idespacio4"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#777676"
+        android:layout_marginTop="11dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/oficina"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Oficina"
+            android:textSize="35dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Switch
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:id="@+id/Switch_oficina"
+                android:onClick=""
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/idespacio5"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#777676"
+        android:layout_marginTop="11dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/cochera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cochera"
+            android:textSize="35dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Switch
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:id="@+id/Switch_cochera"
+                android:onClick=""
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/idespacio6"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#777676"
