--- a/app/src/main/res/layout/diseno_switch.xml
+++ b/app/src/main/res/layout/diseno_switch.xml
@@ -3,15 +3,24 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/eee">
+    <ImageView
+        android:layout_width="270dp"
+        android:layout_height="240dp"
+        android:background="@drawable/fooco2"
+        android:layout_gravity="center"/>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#9E673AB7">
     <TextView
         android:id="@+id/cuarto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cuarto"
+        android:textColor="#000000"
+        android:textStyle="bold"
         android:textSize="35dp"/>
 <LinearLayout
     android:orientation="vertical"
@@ -27,21 +36,20 @@
         />
 </LinearLayout>
 </LinearLayout>
-    <TextView
-        android:id="@+id/idespacio1"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#777676"
-        android:layout_marginTop="11dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9E673AB7"
+        android:layout_marginTop="11dp">
         <TextView
             android:id="@+id/cocina"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cocina"
+            android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="35dp"/>
         <LinearLayout
             android:orientation="vertical"
@@ -57,22 +65,21 @@
                  />
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/idespacio2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#777676"
-        android:layout_marginTop="11dp"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9E673AB7"
+        android:layout_marginTop="11dp">
         <TextView
             android:id="@+id/bano"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Baño"
+            android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="35dp"/>
         <LinearLayout
             android:orientation="vertical"
@@ -88,21 +95,20 @@
                  />
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/idespacio3"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#777676"
-        android:layout_marginTop="11dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9E673AB7"
+        android:layout_marginTop="11dp">
         <TextView
             android:id="@+id/sala"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sala"
+            android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="35dp"/>
         <LinearLayout
             android:orientation="vertical"
@@ -118,21 +124,20 @@
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/idespacio4"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#777676"
-        android:layout_marginTop="11dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9E673AB7"
+        android:layout_marginTop="11dp">
         <TextView
             android:id="@+id/oficina"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Oficina"
+            android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="35dp"/>
         <LinearLayout
             android:orientation="vertical"
@@ -148,21 +153,20 @@
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/idespacio5"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#777676"
-        android:layout_marginTop="11dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9E673AB7"
+        android:layout_marginTop="11dp">
         <TextView
             android:id="@+id/cochera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cochera"
+            android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="35dp"/>
         <LinearLayout
             android:orientation="vertical"
@@ -178,10 +182,5 @@
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/idespacio6"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#777676"
-        android:layout_marginTop="11dp"/>
+
 </LinearLayout>
