--- a/app/src/main/res/layout/hum.xml
+++ b/app/src/main/res/layout/hum.xml
@@ -5,19 +5,19 @@
     android:layout_height="match_parent"
     android:background="@drawable/icono"
     >
-    <Button
+    <ImageButton
         android:id="@+id/hum"
-        android:layout_width="270dp"
-        android:layout_height="240dp"
-        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/humedad"
-        android:baselineAligned="true" />
+        android:layout_centerVertical="true"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/humee"
         android:text="23%"
-        android:textSize="50dp"
+        android:textSize="63dp"
         android:textColor="#000000"
         android:layout_centerInParent="true"
         android:layout_below="@+id/hum"
