--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -14,23 +14,15 @@
         android:layout_marginLeft="10dp"
         android:textColor="#000000"
         android:textSize="19dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="57dp"
-        android:text=" "
-        android:layout_marginLeft="10dp"
-        android:textColor="#000000"
-        android:textSize="19dp" />
     <androidx.cardview.widget.CardView
         android:layout_width="210dp"
         android:layout_height="150dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="10dp"
         android:layout_row="1"
         android:layout_column="0"
-        android:elevation="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/tempera"
-        />
+        android:elevation="15dp" />
     <androidx.cardview.widget.CardView
         android:layout_width="193dp"
         android:layout_height="150dp"
@@ -39,7 +31,6 @@
         android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/control"
-        android:backgroundTint=""
         android:tint="@android:color/background_light" />
     <androidx.cardview.widget.CardView
         android:layout_width="218dp"
@@ -48,7 +39,6 @@
         android:layout_column="0"
         android:layout_gravity="center"
         android:background="@drawable/humedad" />
-
     <androidx.cardview.widget.CardView
         android:layout_width="198dp"
         android:layout_height="150dp"
@@ -63,7 +53,6 @@
         android:layout_column="0"
         android:layout_marginTop="440dp"
         android:background="@drawable/cochera" />
-
     <androidx.cardview.widget.CardView
         android:layout_width="198dp"
         android:layout_height="151dp"
@@ -72,6 +61,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="350dp"
         android:background="@drawable/cerrar" />
-
 </GridLayout>
 
