--- a/app/src/main/res/layout/alarma.xml
+++ b/app/src/main/res/layout/alarma.xml
@@ -19,6 +19,6 @@
         android:text="APAGAR"
         android:textColor="#FFFF"
         android:backgroundTint="#9C27B0"
-        android:textSize="28dp"
+        android:textSize="28dp"/>
 
 </RelativeLayout>
