--- a/app/src/main/res/layout/tem.xml
+++ b/app/src/main/res/layout/tem.xml
@@ -11,7 +11,7 @@
         android:layout_width="330dp"
         android:layout_height="310dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/teeme"
+        android:background="@drawable/tempera"
         android:baselineAligned="true" />
 
     <TextView
