--- a/app/src/main/res/layout/alarma.xml
+++ b/app/src/main/res/layout/alarma.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/alarma"
-        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         />
     <Button
         android:layout_width="350dp"
@@ -20,10 +20,7 @@
         android:text="APAGAR"
         android:textColor="#FFFF"
         android:backgroundTint="#9C27B0"
-<<<<<<< HEAD
         android:textSize="28dp" />
-=======
-        android:textSize="28dp"/>
->>>>>>> 2b8cb154aea4ff782f31233ab1255a6df0494a25
+
 
 </RelativeLayout>
