--- a/app/src/main/res/layout/lista_permisos.xml
+++ b/app/src/main/res/layout/lista_permisos.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="90dp"
-    tools:context=".ReclyclerActivity">
+    tools:context=".ReclyclerActivity"
+    android:background="@drawable/icono">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
